--- a/_config.yml
+++ b/_config.yml
@@ -9,9 +9,9 @@
 # Basic Site Settings
 locale                   : "en-US"
 site_theme               : "default"
-title                    : "Mohammad Khalafi / PhD Student (Southern Methodist University"
+title                    : "Mohamad Khalafi / PhD Student (Southern Methodist University)"
 title_separator          : "-"
-name                     : &name "Your Name"
+name                     : &name "Mohamad Khalafi"
 description              : &description "personal description"
 url                      : https://mohammadkhf.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
