--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ site_theme               : "default"
 title                    : "Mohamad Khalafi / PhD Student (Southern Methodist University)"
 title_separator          : "-"
 name                     : &name "Mohamad Khalafi"
-description              : &description "personal description"
+description              : &description "Research Assistant at SMU"
 url                      : https://mohammadkhf.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "Mohammadkhf/mohammadkhf.github.io"
