--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ author:
   pronouns         : # example: "she/her"  
   bio              : "Research Assistant"
   location         : "Dallas, TX"
-  employer         : "Southern Methodist University (SMU)"
+  employer         : "Southern Methodist University"
   uri              : # URL
   email            : "mohamadk@smu.edu" 
 
