--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@
 # Basic Site Settings
 locale                   : "en-US"
 site_theme               : "default"
-title                    : "Mohamad Khalafi"
+title                    : "Home"
 title_separator          : "-"
 name                     : &name "Mohamad Khalafi"
 description              : &description "Research Assistant at SMU"
