--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,20 +8,20 @@ main:
   - title: "Publications"
     url: /publications/
 
-  - title: "Projects"
-    url: /projects/    
-
   - title: "Talks"
     url: /talks/    
-  
+
   - title: "Teaching"
-    url: /teaching/
+    url: /teaching/    
+    
+  - title: "Portfolio"
+    url: /portfolio/
         
+  - title: "Blog Posts"
+    url: /year-archive/
+    
   - title: "CV"
     url: /cv/
     
-  - title: "Skills"
-    url: /skills/
-    
-  - title: "Honors and Awards"
-    url: /Honoraward/
+  - title: "Guide"
+    url: /markdown/
