--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,24 +3,26 @@ s # The following is the order of the links in the header of the website.
 # Changing the order here will adjust the order and you can also add additional
 # links. Removing a link prevents it from showing in the header, but does not
 # prevent it from being included in the site.
+
 main:
- - title: "Pub"
-    url: /publ/
+ -title: "Publications"
+  url: /publications/
 
-  - title: "Tghj"
-    url: /thjkg/    
+ -title: "Talks"
+  url: /talks/
 
-  - title: "Tgkmg"
-    url: /teachingfcbvg/    
-    
-  - title: "Portcbbvcfolio"
-    url: /portfovb clio/
-        
-  - title: "Blog b vPosts"
-    url: /year-arbjkjchive/
-    
-  - title: "CbcV"
-    url: /ccbv/
-    
-  - title: "Guide"
-    url: /markdown/
+ -title: "Teaching"
+  url: /teaching/
+
+ -title: "Portfolio"
+  url: /portfolio/
+
+ -title: "Blog Posts"
+  url: /year-archive/
+
+ -title: "CV"
+  url: /cv/
+
+ -title: "Guide"
+  url: /markdown/
+  
