--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ title_separator          : "-"
 name                     : &name "Mohamad Khalafi"
 description              : &description "Research Assistant at SMU"
 url                      : https://mohammadkhf.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
-baseurl                  : "" # the subpath of your site, e.g. "/blog"
+baseurl                  : "https://mohammadkhf.github.io" # the subpath of your site, e.g. "/blog"
 repository               : "Mohammadkhf/mohammadkhf.github.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
